# SmartHire

./: .gitignore  README.md  jobs.csv
.github/: copilot-instructions.md
assessment/: .gitignore  README.md
assessment/backend/: requirements.txt
assessment/frontend/: index.html  package-lock.json  package.json  vite.config.js
backend/: .env.example  pyproject.toml  requirements.txt  temp_query.py  temp_query2.py
backend/alembic/: env.py
backend/alembic/versions/: 20260414_0001_pipeline_progress.py  20260416_0002_call_recordings.py  20260416_0003_ai_insights.py  20260416_0004_call_attempt_count.py  20260416_0005_call_analysis.py
backend/app/: ai_insights.py  auth.py  auth_utils.py  background_jobs.py  candidate_ranker.py  config.py  db.py  deps.py  emailer.py  embeddings.py  logger.py  main.py  models.py  pipeline.py  pipeline_service.py  realtime.py  resume_parser.py  schemas.py  security.py  shortlist.py  voice_agent.py
backend/app/assessment/: __init__.py  config.py  db.py  main.py  models.py  realtime.py  schemas.py
backend/app/assessment/services/: proctoring.py  question_generator.py
backend/app/routes/: auth.py  calls.py  candidate_portal.py  candidates.py  chat.py  dashboard.py  hire.py  insights.py  jobs.py  realtime.py
backend/scripts/: backfill_embeddings.py  ingest_jobs_csv.py  test_cartesia_twilio_call.py  test_elevenlabs_twilio_call.py
backend/tests/: test_auth_passwords.py  test_calls.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  (+4 more)
playwright_debug/: dom.json
(+22 files in other folders)
