[tool.poetry]
name = "smarthire-backend"
version = "0.1.0"
description = "SmartHire backend - FastAPI + PostgreSQL"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
httpx = "^0.27.2"
SQLAlchemy = ">=2.0.36,<2.1"
asyncpg = "^0.30.0"
psycopg = {version = "^3.2.0", extras=["binary"]}
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
bcrypt = ">=4.0.1,<5"
email-validator = "^2.0.0"
pypdf = "^5.3.0"
python-multipart = "^0.0.9"
sentence-transformers = "^2.7.0"
huggingface-hub = ">=0.34.0,<1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
